using System;
using DDDSample1.Domain.Shared;

namespace dddnetcore.Domain.Contratos;
public enum TipoContrato{
    InvestigadorDocente,
    Investigador,
    Bolseiro
}